# mesos-module-dvdi

./: .gitignore  .travis.yml  DVDI Isolator Overview and Roadmap.md  Dockerfile  Dockerfile-mesos-build-module-dev  Dockerfile-mesos-build-module-dvdi  Dockerfile-mesos-module-dvdi-dev  Dockerfile-mesos-modules-dev  Makefile  MesosCluster-1.0.1-EUCENTRAL-Frankfurt-Rexray-DVDCLI-Module.json  MesosCluster-1.0.1-USWEST-Oregon-Rexray-DVDCLI-Module.json  MesosCluster.1.0.1.json  README.md  VERSION  Vagrantfile  bintray-unstable.json  deckset.md  docker-compose.yml  docker-isolator-entrypoint.sh  dvdi-modules.spec  mesos-install.sh  set-travis-env.sh
demo/: launch-cluster-before.sh  launch-cluster.sh  launch-probes-before.sh  launch-probes-isolated.sh  launch-probes.sh  stop-cluster-before.sh  stop-cluster.sh  stop-probes-before.sh  stop-probes-isolated.sh  stop-probes.sh
demo/before/: docker-compose.yml
demo/marathon/: star-iso-resources.json  star-resources-before.json  star-resources.json  stars-before.json  stars-isolated.json  stars.json
dvdi/: modules.json
init_scripts/etc/config/: mesos-dns.json
init_scripts/etc/service/docker/: run
isolator/: Makefile.am  bootstrap  configure.ac  modules.json
isolator/isolator/: README.md  docker_volume_driver_isolator.cpp  docker_volume_driver_isolator.hpp  interface.hpp  interface.proto
test/: run_compose_st.sh  sample-flask-app-2.json  sample-flask-app.json  sampleflaskapp.tgz
